--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+  >
     <string name="app_name">SnowMusic</string>
+
+    <string name="snow_music">雪音乐</string>
+
 </resources>
