--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools"
-  >
+<resources>
     <string name="app_name">SnowMusic</string>
 
     <string name="snow_music">雪音乐</string>
+    <string name="navigation_drawer_open">drawer_open</string>
+    <string name="navigation_drawer_close">drawer_close</string>
 
 </resources>
