--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="snow_music">雪音乐</string>
     <string name="navigation_drawer_open">drawer_open</string>
     <string name="navigation_drawer_close">drawer_close</string>
+    <string name="mine">我的</string>
+    <string name="discover">发现</string>
+    <string name="top">排行榜</string>
+    <string name="mv">MV</string>
+
+
+
 
 </resources>
