我的音乐粗略绘制

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,16 @@
     <string name="discover">发现</string>
     <string name="top">排行榜</string>
     <string name="mv">MV</string>
-
+    <string name="item_local">本地歌曲</string>
+    <string name="item_history">播放历史</string>
+    <string name="item_favorite">我的收藏</string>
+    <string name="item_download">下载</string>
+    <string name="item_cached">缓存下载</string>
+    <string name="item_cached_music">缓存歌曲</string>
+    <string name="item_video">本地视频</string>
+    <string name="local_music">本地歌曲</string>
+    <string name="song_num">%1$d 首</string>
+    <string name="default_num">0 首</string>
 
 
 
