发现推荐歌单

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="broadcasting">电台</string>
     <string name="look_all">查看全部</string>
     <string name="recommend_song_list">推荐歌单</string>
+    <string name="song_list_square">歌单广场</string>
 
 
 
