--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,6 @@
     <string name="mv_rank">排行榜</string>
     <string name="mv_update_recently">最近更新</string>
     <string name="mv_search">搜索</string>
-
+    <string name="tip_empty_song">空空如也</string>
 
 </resources>
