--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,9 @@
     <string name="artist_song">歌曲</string>
     <string name="artist_album">专辑</string>
     <string name="artist_detail">详情</string>
+    <string name="song">歌曲</string>
+    <string name="artist_tips">歌手 - 专辑</string>
+    <string name="unknown">未知</string>
+
 
 </resources>
