--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="song">歌曲</string>
     <string name="artist_tips">歌手 - 专辑</string>
     <string name="unknown">未知</string>
+    <string name="brief">简介:</string>
+    <string name="song_list">歌单</string>
 
 
 </resources>
