--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="open">打开</string>
     <string name="close">关闭</string>
     <string name="cancel">取消</string>
+    <string name="single_song">单曲</string>
+    <string name="artist">歌手</string>
+    <string name="album">专辑</string>
+    <string name="folder">文件夹</string>
 
 
 </resources>
